# icart_mini_ros2

./: All-in-One.md  CMakeLists.txt  README.md  Wiki.md  auto_start.sh  package.xml  ros2.repos  start_icart.sh
.docs/tools/: build_all_in_one.sh
.docs/wiki/: Architecture.md  Changelog.md  Home.md  Leg-Tracker.md  Roadmap.md  Setup.md  YPSpur-Bridge.md  Year-In-Review.md
docker/: Dockerfile  before_bringup.sh  entrypoint.sh  run.sh
icart_mini_bringup/: package.xml  setup.cfg  setup.py
icart_mini_bringup/launch/: icart_mini_bringup.launch.py
icart_mini_description/: CMakeLists.txt  package.xml
icart_mini_description/launch/: icart_mini_display.launch.py  icart_mini_rviz.launch.py
icart_mini_description/rviz/: icart_mini.rviz
icart_mini_description/urdf/: icart.urdf  icart_mini.urdf  icart_mini.xacro
icart_mini_leg_tracker/: CMakeLists.txt  package.xml
icart_mini_leg_tracker/csv/: output_sample.csv
icart_mini_leg_tracker/include/icart_mini_leg_tracker/: leg_cluster_tracking.hpp
icart_mini_leg_tracker/include/icart_mini_leg_tracker/utils/: csv_logger.hpp  marker_helper.hpp
icart_mini_leg_tracker/msg/: ClusterInfo.msg  ClusterInfoArray.msg
icart_mini_leg_tracker/scripts/: led_status.py
icart_mini_leg_tracker/src/: leg_cluster_tracking.cpp  lidar_subscriber.cpp  pointcloud_processor.cpp  preprocessing_cluster_node.cpp  preprocessing_filter_node.cpp
icart_mini_leg_tracker/src/utils/: csv_logger.cpp  marker_helper.cpp
icart_mini_ypspur_bridge/: CMakeLists.txt  package.xml
icart_mini_ypspur_bridge/config/: teleop_twist_joy_f710_params.yaml
icart_mini_ypspur_bridge/launch/: icart_bringup.launch.py  icart_mini_ypspur_bridge.launch.py
icart_mini_ypspur_bridge/src/: icart_mini_ypspur_bridge.cpp
sh/: start_icart.sh  stop_icart.sh
