<?xml version="1.0"?>
<package format="3">
  <name>icart_mini_description</name>
  <version>0.1.0</version>
  <description>iCart Mini description package for ROS 2</description>
  <maintainer email="user@example.com">root</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
